--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-MONGODB_URI = "mongodb+srv://ecommerce:ecommerce123@cluster0.eehliyw.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI = "DBSEVER"
 NODE_ENV=development
-JWT_SECRET=21333FF
+JWT_SECRET=4555555
 
 EMAIL_HOST =smtp-mail.outlook.com
-EMAIL_USER =poojithapj2002@gmail.com
-EMAIL_PASS ='Pankaja2002'
+EMAIL_USER =YOUREMAIL@gmail.com
+EMAIL_PASS ='PASSWORD'
 
 FRONTEND_URL=http://localhost:3000
 
-CRYPTR_KEY= myTotallySecretKeyqwe   
+CRYPTR_KEY= YOURKRY   
